--- a/nginx/tt/default.conf
+++ b/nginx/tt/default.conf
@@ -12,7 +12,7 @@ server {
 
    #后台模块代理：
     location /phxapi {
-            proxy_pass   http://192.168.3.3:9000;   #指向后台模块服务地址
+            proxy_pass   http://docker.for.mac.host.internal:8000;   #指向后台模块服务地址
     }
 
     #前端代理配置：
