--- a/pipline/jar/Jenkinsfile
+++ b/pipline/jar/Jenkinsfile
@@ -16,14 +16,14 @@ pipeline {
             }
     
             steps {
-                git branch: 'master', credentialsId: 'GitHubAccess', url: 'http://gitlab.eccom.com.cn:8929/neteagle_c/ccb4.0/ccb-service-cus.git'
+                git branch: 'master', credentialsId: 'GitHubAccess', url: 'git'
                 sh 'mvn clean package -DskipTests'
-                sh 'scp ./target/ccb-service-1.0.0.jar root@172.20.18.92:/opt/custom/ccb-custom-service'
+                sh 'scp ./target/service-1.0.0.jar root@172.20.18.92:/opt/custom/custom-service'
                 sh 'scp ./bin/startup.sh root@172.20.18.92:/opt/custom/ccb-custom-service'
-                sh "ssh root@172.20.18.92 'sh /opt/custom/ccb-custom-service/startup.sh stop'"
-                sh "ssh root@172.20.18.92 'sh /opt/custom/ccb-custom-service/startup.sh start'"
-                sh "ssh root@172.20.18.92 'tail -n 100  /opt/custom/ccb-custom-service/logs/ccb-service-1.0.0.jar.log'"
-                sh "ssh root@172.20.18.92 'ls /opt/custom/ccb-custom-service/ |grep startup.sh |xargs rm -rf'"
+                sh "ssh root@172.20.18.92 'sh /opt/custom/custom-service/startup.sh stop'"
+                sh "ssh root@172.20.18.92 'sh /opt/custom/custom-service/startup.sh start'"
+                sh "ssh root@172.20.18.92 'tail -n 100  /opt/custom/custom-service/logs/service-1.0.0.jar.log'"
+                sh "ssh root@172.20.18.92 'ls /opt/custom/custom-service/ |grep startup.sh |xargs rm -rf'"
             }
             
         }
